# chatman-nano-stack

./: .gitignore  5_WHYS_FILES_NOT_UTILIZED_ANALYSIS.md  5_WHYS_FOREX_GAPS.md  5_WHYS_FOREX_REALITY_CHECK.md  5_WHYS_WHY_STILL_WRONG.md  5_whys_analysis.md  8020_PERMUTATION_MATRIX.md  80_20_FAILURES_SUMMARY.md  80_20_IMPLEMENTATION_COMPLETE.md  80_20_IMPLEMENTATION_REPORT.md  80_20_TEST_RESULTS_MERMAID.md  80_20_WINS_FINAL_REPORT.md  80_20_validation.sh  80_20_validation_report.txt  80_20_validation_report_v2.txt  ADVANCED_FORGE_SUMMARY.md  ADVERSARIAL_FOREX_TESTING.md  ADVERSARIAL_TESTING_80_20_DEFINITION_OF_DONE.md  ADVERSARIAL_TESTING_COMPLETE_REPORT.md  ADVERSARIAL_TESTING_OTEL_RESULTS.md  ADVERSARIAL_TEST_PERMUTATION_REPORT.json  AEGIS_FABRIC_80_20_VALIDATION_COMPLETE.md  AEGIS_FABRIC_IMPLEMENTATION_REPORT.md  AEGIS_FABRIC_OTEL_METRICS_MERMAID.md  AEGIS_FABRIC_VALIDATION_RESULTS_MERMAID.md  AEGIS_TTL_GENERATION_REPORT.md  ALL_8_STEPS_DEPENDENCY_MAP.md  AOT_INTEGRATION_PLAN.md  ARCHITECTURE_AWARE_CONSOLIDATION.md  ASH_REACTOR_AI_SWARM_80_20_SOLUTION.md  ASH_REACTOR_OTEL_VALIDATION_REPORT.json  ASH_REACTOR_STEPS_REPORT.md  AUTHORIZATION_SUCCESS_TRACE.md  BACKWARDS_ANALYSIS.md  BDD_80_20_COMPLETE.md  BDD_TEST_COVERAGE_REPORT.md  BITACTOR_CLI_COMPLETE.md  BITACTOR_COMPLETE_REPORT.md  BITACTOR_COMPREHENSIVE_VALIDATION_REPORT.json  BITACTOR_COMPREHENSIVE_VALIDATION_REPORT.md  (+639 more)
.github/: dependabot.yml
.hive-mind/: config.json
.jinja_cache/: compiled_templates.pkl
.lh/: .gitignore.json  Makefile.json  README.md.json  ZERO_TICK_IMPACT_EVALUATION.md.json  advanced_forge_demo.py.json  bitactor-reqs.md.json  cns-forge.md.json  generate_realtime_ttl.py.json  ontology-forge.md.json  pyproject.toml.json  quantum_semantic_compiler.py.json  test_advanced_forge.py.json  test_generated_uhft.c.json  validate_otel.py.json  zero-tick.md.json
QUARANTINE_RED_TEAM/: ATTACK_EVIDENCE.json
SECURE_BACKUP_1753490259/: ttl_ash_reactor_transformer.ex
aegis-nuxt/: app.vue  nuxt.config.ts  package-lock.json  package.json  tsconfig.json
alternative_entries/: ENTRY_POINTS_SUMMARY.md  all_entries_entry.json  ash_first_entry.json  bitactor_first_entry.json  dspy_first_entry.json  kubernetes_first_entry.json  reactor_first_entry.json  ttl_first_entry.json
ash_reactor_80_20/: Dockerfile  Makefile  README.md  deploy.sh  mix.exs
ash_reactor_notifications_permutations_1753542397/: INNOVATION_SUMMARY.md  adaptive_notification_routing_1753542397.ex  ash_reactor_notifications_permutations.json  combination_broadcast_all_steps_ash_notifier_integration_ash_resource_generation_step_1753542397.ex  combination_broadcast_all_steps_ash_notifier_integration_ontology_validation_step_1753542397.ex  combination_broadcast_all_steps_ash_notifier_integration_ttl_parsing_step_1753542397.ex  combination_broadcast_all_steps_phoenix_channels_pubsub_ash_resource_generation_step_1753542397.ex  combination_broadcast_all_steps_phoenix_channels_pubsub_ontology_validation_step_1753542397.ex  combination_broadcast_all_steps_phoenix_channels_pubsub_ttl_parsing_step_1753542397.ex  combination_broadcast_all_steps_reactor_step_webhooks_ash_resource_generation_step_1753542397.ex  combination_broadcast_all_steps_reactor_step_webhooks_ontology_validation_step_1753542397.ex  combination_broadcast_all_steps_reactor_step_webhooks_ttl_parsing_step_1753542397.ex  combination_reactive_event_notifications_ash_notifier_integration_ash_resource_generation_step_1753542397.ex  combination_reactive_event_notifications_ash_notifier_integration_ontology_validation_step_1753542397.ex  combination_reactive_event_notifications_ash_notifier_integration_ttl_parsing_step_1753542397.ex  combination_reactive_event_notifications_phoenix_channels_pubsub_ash_resource_generation_step_1753542397.ex  combination_reactive_event_notifications_phoenix_channels_pubsub_ontology_validation_step_1753542397.ex  combination_reactive_event_notifications_phoenix_channels_pubsub_ttl_parsing_step_1753542397.ex  combination_reactive_event_notifications_reactor_step_webhooks_ash_resource_generation_step_1753542397.ex  combination_reactive_event_notifications_reactor_step_webhooks_ontology_validation_step_1753542397.ex  combination_reactive_event_notifications_reactor_step_webhooks_ttl_parsing_step_1753542397.ex  combination_streaming_pipeline_updates_ash_notifier_integration_ash_resource_generation_step_1753542397.ex  combination_streaming_pipeline_updates_ash_notifier_integration_ontology_validation_step_1753542397.ex  combination_streaming_pipeline_updates_ash_notifier_integration_ttl_parsing_step_1753542397.ex  combination_streaming_pipeline_updates_phoenix_channels_pubsub_ash_resource_generation_step_1753542397.ex  combination_streaming_pipeline_updates_phoenix_channels_pubsub_ontology_validation_step_1753542397.ex  combination_streaming_pipeline_updates_phoenix_channels_pubsub_ttl_parsing_step_1753542397.ex  combination_streaming_pipeline_updates_reactor_step_webhooks_ash_resource_generation_step_1753542397.ex  combination_streaming_pipeline_updates_reactor_step_webhooks_ontology_validation_step_1753542397.ex  combination_streaming_pipeline_updates_reactor_step_webhooks_ttl_parsing_step_1753542397.ex  combination_targeted_step_notifications_ash_notifier_integration_ash_resource_generation_step_1753542397.ex  combination_targeted_step_notifications_ash_notifier_integration_ontology_validation_step_1753542397.ex  combination_targeted_step_notifications_ash_notifier_integration_ttl_parsing_step_1753542397.ex  cross_system_event_integration_1753542397.ex  (+12 more)
ash_reactor_pure/: mix.exs
(+1775 files in other folders)
